--- a/Server/app/static/Application/Home/home.html
+++ b/Server/app/static/Application/Home/home.html
@@ -118,3 +118,5 @@
     </ol>
     <input class="textarea" type="text" placeholder="Type here!"/><div class="emojis"></div>
 </div>
+
+<date-modal></date-modal>
