--- a/Server/app/static/Application/Home/dateModal.html
+++ b/Server/app/static/Application/Home/dateModal.html
@@ -56,7 +56,7 @@ aria-labelledby="dateModal" aria-hidden="true" data-backdrop="static" data-keybo
 
             <div style="clear:both;"></div>
             <div class="modal-footer">
-                <a class="btn btn-success pull-right mr10" data-dismiss="modal" aria-hidden="true" ng-disabled="!startDate || !endDate">Ok</a>
+                <a class="btn btn-success pull-right mr10" data-dismiss="modal" aria-hidden="true" ng-disabled="!startDate || !endDate" ng-click="parseDates(startDate, endDate)">Ok</a>
             </div>
         </div>
     </div>
