--- a/Server/app/static/Application/Home/home.html
+++ b/Server/app/static/Application/Home/home.html
@@ -14,7 +14,7 @@
     
     <div class="row">
         <div class="menu">
-            <div class="name">Holiday Planner</div>
+            <div class="name">Holiday Advisor</div>
         </div>
         
         <ol class="chat" id="chatDiv">
